--- a/index.html
+++ b/index.html
@@ -1,206 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-  <head>
-    <!-- Meta tags -->
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- title -->
-    <title>SB Portfólio</title>
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/extends.css" />
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <!-- navbar -->
-    <nav class="navbar">
-      <div class="navbar__content max-width mb-0">
-        <a href="/">
-          <img src="assets/logoMSilveira.svg" alt="Maicon Silveira" />
-        </a>
-        <ul class="navbar__links">
-          <li><a href="#header">Início</a></li>
-          <li><a href="#about">Sobre</a></li>
-          <li><a href="#skills">Habilidades</a></li>
-          <li><a href="#projects">Projetos</a></li>
-          <li><a href="#footer">Contato</a></li>
-        </ul>
-        <div class="navbar__mobile">
-          <img src="assets/menu.svg" alt="menu" class="burguer" />
-          <ul class="mobile__links">
-            <li><a href="#header">Início</a></li>
-            <li><a href="#about">Sobre</a></li>
-            <li><a href="#skills">Habilidades</a></li>
-            <li><a href="#projects">Projetos</a></li>
-            <li><a href="#footer">Contato</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <!-- header -->
-    <header id="header" class="max-width">
-      <div class="header__left">
-        <h1>Sou Maicon Silveira, Desenvolvedor BackEnd</h1>
-        <p>
-          Desenvolvedor BackEnd atualmente imersa no mundo da tecnologia
-          com conhecimentos em Java, . Sou apaixonado por criar
-          soluções tecnológicas que resolvem problemas reais e que agregam valor
-          aos usuários.
-        </p>
-        <a href="#about" class="btn btn-primary">Saiba Mais!</a>
-      </div>
-      <div class="header__right">
-        <div class="header__image">
-          <img src="assets/Maicon-Editada.png" alt="Maicon Silveira" class="maicon" />
-          <img src="assets/abstract.svg" alt="background" class="background" />
-        </div>
-      </div>
-    </header>
-
-    <!-- Sobre -->
-    <section id="about" class="about max-width">
-      <div class="about__left">
-        <h2 class="secondary-title">Além do código: quem sou eu?</h2>
-        <p>
-          Que tal se conectar comigo nas redes sociais abaixo e saber mais sobre
-          meu trabalho?
-        </p>
-        <ul>
-          <li>
-            <a href="https://www.linkedin.com/in/maiconsb/"><img src="assets/linkedin.svg" alt="Linkedin" /></a>
-          </li>
-          <li>
-            <a href="https://github.com/MaiconSB"><img src="assets/github.svg" alt="Github" /></a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/maiconsb"><img src="assets/facebook.svg" alt="Facebook" /></a>
-          </li>
-        </ul>
-      </div>
-      <div class="about__right">
-        <h3 class="tertiary-title mb-m">
-          Desenvolvedor BackEnd apaixonado por tecnologia
-        </h3>
-        <p>
-          Olá, sou Maicon Silveira, Desenvolvedor BackEnd apaixonado por tecnologia e soluções inovadoras. 
-          Estou atualmente em busca da minha primeira oportunidade na área de tecnologia, dedicando-me continuamente à expansão dos meus conhecimentos 
-          e enfrentando desafios que impulsionam meu crescimento profissional.
-        <p> 
-          Minhas habilidades incluem expertise em CI/CD, Spring, JPA, e outras tecnologias relevantes. Estou comprometido em aprimorar constantemente 
-          minhas capacidades para oferecer soluções eficientes e criativas.  
-          Estou animado para contribuir para projetos desafiadores e integrar-me a equipes que compartilham minha paixão por inovação tecnológica. 
-          Explore meu portfólio para conhecer mais sobre minhas experiências e conquistas.
-        </p>
-          Vamos criar juntos soluções impactantes!
-        </p>
-      </div>
-    </section>
-
-    <!-- habilidades -->
-    <section id="skills" class="skills">
-      <div class="skills__content max-width">
-        <h2 class="tertiary-title">Minha caixinha de ferramentas</h2>
-        <p class="description">
-          Descubra as habilidades e ferramentas que domino e que me permitem
-          criar soluções criativas e funcionais.
-        </p>
-        <ul>
-          <li class="skills__item">
-            <div class="image-container">
-              <img src="assets/notebook.png" alt="Desenvolvimento Web" />
-            </div>
-            <h3>Desenvolvimento Web</h3>
-            <p>
-              Desenvolvedor web com foco em sistemas.
-            </p>
-          </li>
-          <li class="skills__item">
-            <div class="image-container">
-              <img src="assets/colors.png" alt="Web Design" />
-            </div>
-            <h3>Web Design</h3>
-            <p>
-              Conhecimento em Photoshop, Illustrator e Figma.
-              Habilidade em criar layouts modernos.
-            </p>
-          <li class="skills__item">
-            <div class="image-container">
-              <img src="assets/files.png" alt="Gerenciamentos de versões" />
-            </div>
-            <h3>Gerenciamentos de versões</h3>
-            <p>
-              Experiência em ferramentas de gerenciamento de versão para
-              controle de projetos.
-            </p>
-          </li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- Projetos -->
-    <section id="projects" class="projects max-width">
-      <div class="projects__content">
-        <h2 class="secondary-title">Projetos em Destaque</h2>
-        <p>
-          Aqui estão alguns dos
-          meus trabalhos mais recentes
-        </p>
-      </div>
-      <ul>
-        <li>
-          <div class="image">
-            <img src="assets/task-manager.png" alt="Projeto DSLIST" />
-          </div>
-          <div class="projects__info">
-            <h3 class="tertiary-title">
-              Projeto DSLIST
-            </h3>
-            <p>
-              O DSLIST é uma aplicação web que fornece recursos para criar, listar, atualizar e excluir jogos.
-              Padrão REST para API Web: O projeto segue os princípios RESTful para projetar APIs web que são escaláveis e de fácil manutenção.
-            </p>
-            <a href="https://github.com/MaiconSB/dslist">Leia mais &rarr;</a>
-          </div>
-        </li>
-      </ul>
-    </section>
-
-    <!-- Footer -->
-    <footer id="footer">
-      <div class="footer__content max-width mb-0">
-        <h2 class="tertiary-title mb-s">Vamos conversar?</h2>
-        <p class="mb-m">
-          Ficarei feliz em saber mais sobre seus projetos e como podemos
-          trabalhar juntos para torná-los realidade.
-        </p>
-        <div class="footer__contact mb-m">
-          <span class="mb-m">maiconsb2041@gmail.com</span>
-          <span>21 98231-1247</span>
-        </div>
-        <ul class="mb-l">
-           <li>
-            <a href="https://www.linkedin.com/in/maiconsb/"><img src="assets/linkedin.svg" alt="Linkedin" /></a>
-          </li>
-          <li>
-            <a href="https://github.com/MaiconSB"><img src="assets/github.svg" alt="Github" /></a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/maiconsb"><img src="assets/facebook.svg" alt="Facebook" /></a>
-          </li>
-        </ul>
-        <p class="footer__copyright">
-          © 2024 Maicon Silveira. Todos os direitos reservados.
-        </p>
-      </div>
-    </footer>
-    <!-- script -->
-    <script src="scripts/index.js"></script>
-  </body>
-</html>
+Olá, mundo
