--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="header__left">
         <h1>Sou Maicon Silveira, Desenvolvedor BackEnd</h1>
         <p>
-          Desenvolvedor BackEnd atualmente imersa no mundo da tecnologia
+          Desenvolvedor BackEnd atualmente imerso no mundo da tecnologia
           com conhecimentos em Java, . Sou apaixonado por criar
           soluções tecnológicas que resolvem problemas reais e que agregam valor
           aos usuários.
@@ -165,8 +165,33 @@
             <p>
               O DSLIST é uma aplicação web que fornece recursos para criar, listar, atualizar e excluir jogos.
               Padrão REST para API Web: O projeto segue os princípios RESTful para projetar APIs web que são escaláveis e de fácil manutenção.
-            </p>
+           </p>
             <a href="https://github.com/MaiconSB/dslist">Leia mais &rarr;</a>
+          </div>
+          
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <div class="image">
+            <img src="assets/capaEcommerce.png" alt="Projeto DSCOMMERCE" />
+          </div>
+          <div class="projects__info">
+            <h3 class="tertiary-title">
+              Projeto DSCOMMERCE
+            </h3>
+            <p>
+              Apresento o DSCommerce, meu projeto de estudo. 
+              É um projeto na prática pelo desenvolvimento de sistemas,
+              abordando desde telas de cadastro até fluxos de caso de
+              uso. Com um modelo de domínio simples, mas abrangente,
+              o DSCommerce oferece uma experiência envolvente, destacando-se
+              pela gestão eficiente de usuários, produtos e pedidos, 
+              além de uma distinção clara entre clientes e administradores.
+              Explore o DSCommerce no meu portfólio e descubra como estou 
+              expandindo meu conhecimento no universo do e-commerce.
+
+            <a href="https://github.com/MaiconSB/DScommerce">Leia mais &rarr;</a>
           </div>
         </li>
       </ul>
